[tool.poetry]
name = "gen3cirrus"
version = "3.1.0"
description = ""
authors = ["Center for Translational Data Science at the University of Chicago <support@gen3.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gen3cirrus"}]

[tool.poetry.dependencies]
python = "^3.9"
backoff = "*"
cdislogging = "*"
oauth2client = "*"
google-cloud-storage = "*"
google-api-python-client = "*"
google-auth = "*"
google-auth-httplib2 = "*"
boto3 = "*"

[tool.poetry.group.dev.dependencies]
mock = "*"
pytest = "*"
Sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
