[tool.poetry]
name = "gen3cirrus"
version = "4.0.0"
description = ""
authors = ["Center for Translational Data Science at the University of Chicago <support@gen3.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gen3cirrus"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
requests = "*"
backoff = "*"
cdislogging = "*"
oauth2client = "*"
google-cloud-storage = "*"
google-api-python-client = "*"
google-auth = "*"
boto3 = "*"
httplib2 = "*"
botocore = "*"

[tool.poetry.group.dev.dependencies]
mock = "*"
pytest = "*"
Sphinx = "*"
deptry = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
